c/api/builtin/crypto.h

tree_cell *nasl_bf_cbc_decrypt (lex_ctxt *);
tree_cell *nasl_dsa_do_verify (lex_ctxt * lexic);
tree_cell *nasl_pem_to_rsa (lex_ctxt * lexic);
tree_cell *nasl_pem_to_dsa (lex_ctxt * lexic);
tree_cell *nasl_rsa_sign (lex_ctxt * lexic);
tree_cell *nasl_dsa_do_sign (lex_ctxt * lexic);
tree_cell *nasl_rc4_encrypt (lex_ctxt * lexic);
tree_cell *nasl_aes128_cbc_encrypt (lex_ctxt * lexic);
tree_cell *nasl_aes256_cbc_encrypt (lex_ctxt * lexic);
tree_cell *nasl_aes128_ctr_encrypt (lex_ctxt * lexic);
tree_cell *nasl_aes256_ctr_encrypt (lex_ctxt * lexic);
tree_cell *nasl_des_ede_cbc_encrypt (lex_ctxt * lexic);
tree_cell *nasl_aes128_gcm_encrypt (lex_ctxt * lexic);
tree_cell *nasl_aes256_gcm_encrypt (lex_ctxt * lexic);