nasl-sys/src/ast.rs

    pub fn nasl_bf_cbc_decrypt(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_dsa_do_verify(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_pem_to_rsa(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_pem_to_dsa(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_rsa_sign(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_dsa_do_sign(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_rc4_encrypt(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_aes128_cbc_encrypt(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_aes256_cbc_encrypt(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_aes128_ctr_encrypt(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_aes256_ctr_encrypt(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_des_ede_cbc_encrypt(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_aes128_gcm_encrypt(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_aes256_gcm_encrypt(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_isotime_now(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_isotime_is_valid(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_isotime_scan(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_isotime_print(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_isotime_add(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_rand(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_usleep(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_sleep(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ftp_log_in(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ftp_get_pasv_address(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_telnet_init(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_start_denial(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_end_denial(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_dump_ctxt(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_do_exit(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_isnull(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_make_list(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_make_array(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_keys(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_max_index(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_typeof(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_defined_func(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_sort_array(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_unixtime(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_gettimeofday(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_localtime(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_mktime(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_open_sock_kdc(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_dec2str(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_get_byte_order(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_gunzip(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_gzip(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_pread(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_find_in_path(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_fread(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_fwrite(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_unlink(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_get_tmp_dir(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_file_stat(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_file_open(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_file_close(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_file_read(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_file_write(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_file_seek(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_snmpv1_get(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_snmpv2c_get(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_snmpv3_get(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ssh_connect(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ssh_disconnect(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ssh_session_id_from_sock(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ssh_get_sock(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ssh_set_login(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ssh_userauth(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ssh_request_exec(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ssh_shell_open(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ssh_shell_read(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ssh_shell_write(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ssh_shell_close(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ssh_login_interactive(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ssh_login_interactive_pass(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ssh_exec(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ssh_get_issue_banner(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ssh_get_server_banner(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ssh_get_auth_methods(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ssh_get_host_key(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_versioninfo(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_connect(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_close(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_query(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_connect_rsop(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_query_rsop(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_connect_reg(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_reg_get_sz(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_reg_enum_value(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_reg_enum_key(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_reg_get_bin_val(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_reg_get_dword_val(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_reg_get_ex_string_val(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_reg_get_mul_string_val(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_reg_get_qword_val(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_reg_set_dword_val(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_reg_set_qword_val(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_reg_set_ex_string_val(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_reg_set_string_val(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_reg_create_key(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_wmi_reg_delete_key(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_smb_versioninfo(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_smb_connect(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_smb_close(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_smb_file_SDDL(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_smb_file_owner_sid(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_smb_file_group_sid(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_smb_file_trustee_rights(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_win_cmd_exec(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn http_open_socket(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn http_close_socket(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn http_get(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn http_head(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn http_post(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn http_delete(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn http_put(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_http_recv_headers(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn cgibin(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_is_cgi_installed(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_http_keepalive_send_recv(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_http_share_exists(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn forge_ip_packet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn set_ip_elements(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_ip_element(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn dump_ip_packet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn insert_ip_options(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn forge_tcp_packet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_tcp_element(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn set_tcp_elements(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn dump_tcp_packet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_tcp_ping(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn forge_udp_packet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn set_udp_elements(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn dump_udp_packet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_udp_element(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn forge_icmp_packet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_icmp_element(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn forge_igmp_packet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_send_packet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_pcap_next(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_send_capture(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn forge_ipv6_packet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn set_ipv6_elements(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_ipv6_element(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn dump_ipv6_packet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn insert_ipv6_options(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn forge_tcp_v6_packet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_tcp_v6_element(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn set_tcp_v6_elements(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn dump_tcp_v6_packet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn forge_udp_v6_packet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn set_udp_v6_elements(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn dump_udp_v6_packet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_udp_v6_element(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn forge_icmp_v6_packet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_icmp_v6_element(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn forge_igmp_v6_packet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_tcp_v6_ping(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_send_v6packet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn add_hostname(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_hostname(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_hostnames(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_hostname_source(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn resolve_hostname(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_host_ip(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_host_open_port(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_port_state(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_udp_port_state(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_islocalhost(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_islocalnet(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_this_host(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_this_host_name(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn get_port_transport(arg1: *mut lex_ctxt) -> *mut tree_cell;
